syntax = "proto3";

package NUgc.NSchema;

import "kernel/ugc/schema/proto/schema.proto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";


message TDataErasureRequestStatus {
    enum EState {
        NEW_REQUEST = 0;
        IN_PROGRESS = 1;
        ERROR_OCCURED = 2;
        COMPLETED = 3;
    }

    message TProcessingPhase {
        google.protobuf.Timestamp StartTime = 1;
        google.protobuf.Timestamp CompleteTime = 2;
        uint32 ErasedRecords = 3;
        google.protobuf.StringValue ErrorMessage = 4;
    }

    string CategoryId = 1;
    string RequestId = 2;
    EState State = 3;

    google.protobuf.Timestamp RequestTime = 4;
    google.protobuf.Timestamp CompleteTime = 5;

    TProcessingPhase RemoveFromUgcDb1 = 6;
    TProcessingPhase RemoveFromUgcDb2 = 7;
    TProcessingPhase AddToBlacklists = 8;
}


message TDataErasureRequests {
    string PassportUID = 1;

    repeated TDataErasureRequestStatus Status = 2 [(topic) = "ugc"];

    option (schema) = {
        Table: {
            Name: "status"
            Field: "Status"
            Key: "CategoryId"
        }
    };
}
